Проект №12: Правки после ревью